--- a/art-stor/src/index.ejs
+++ b/art-stor/src/index.ejs
@@ -13,10 +13,10 @@
     <link href="min/custom-min.css" type="text/css" rel="stylesheet" >
     <!--
      -->
-    <!-- <% if (htmlWebpackPlugin.options.trackJSToken) { %>
+    <% if (htmlWebpackPlugin.options.trackJSToken) { %>
     <script>window._trackJs = {token: '<%= htmlWebpackPlugin.options.trackJSToken %>'};</script>
     <script src="https://d2zah9y47r7bi2.cloudfront.net/releases/current/tracker.js"></script>
-    <% } %> -->
+    <% } %>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8"/>
