changed to root

--- a/art-stor/src/index.ejs
+++ b/art-stor/src/index.ejs
@@ -31,7 +31,7 @@
     </div>
 
 
-    <div id="app"></div>
+    <div id="root"></div>
 
     <!--  Scripts-->
     <script src="min/plugin-min.js"></script>
